--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,6 +14,7 @@
 
     <script>
       window.fbAsyncInit = function() {
+        window.FB=FB;
         FB.init({
           appId      : '538402333166380',
           cookie     : true,
