--- a/client/public/index.html
+++ b/client/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Say it with a Postcard!</title>
   </head>
   <body>
 
@@ -48,7 +48,7 @@
          fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
     </script>
-    
+
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
