--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,8 +10,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
