get most of the pages updated with new styles

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -52,6 +52,16 @@
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
+
+    <style>
+    /* uncomment to find weird css*/
+    /** {
+    background: #000 !important;
+    color: #0f0 !important;
+    outline: solid #f00 1px !important;
+    }*/
+  </style>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
