update facebook contents

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,12 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah|Permanent+Marker|Rock+Salt|Satisfy" rel="stylesheet">
+
+    <meta property="og:image" content="%PUBLIC_URL%/postcard-icon.svg" />
+    <meta property="og:description" content='Deliver custom 4"x6" postcards directly to friends, family, and business contacts. Upload your own photos straight from your phone, add a custom message, and whatever you have to say; say it with a postcard!' />
+    <meta property="og:url" content="https://sayitwithapostcard.com/" />
+    <meta property="og:title" content="Say It With A Postcard!" />
+
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
