--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Amatic+SC|Gloria+Hallelujah|Permanent+Marker|Rock+Salt|Satisfy" rel="stylesheet">
 
-    <meta property="og:image" content="%PUBLIC_URL%/postcard-logo-and-text.png" />
+    <meta property="og:image" content="https://sayitwithapostcard.com/postcard-logo-and-text.png" />
     <meta property="og:description" content='Deliver custom 4"x6" postcards directly to friends, family, and business contacts. Upload your own photos straight from your phone, add a custom message, and whatever you have to say; say it with a postcard!' />
     <meta property="og:url" content="https://sayitwithapostcard.com/" />
     <meta property="og:title" content="Say It With A Postcard!" />
